--- a/references.bib
+++ b/references.bib
@@ -107,3 +107,10 @@
   year={2000},
   publisher={Simon and schuster}
 }
+
+@article{soetaert2017package,
+  title={Package ‘ReacTran’},
+  author={Soetaert, Karline and Meysman, Filip and Soetaert, Maintainer Karline},
+  year={2017}
+}
+
